--- a/index.html
+++ b/index.html
@@ -5,29 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JavaScript Fundamentals Quiz</title>
-  <style>
-    .popup {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      padding: 1rem;
-      background-color: rgba(0, 0, 0, 0.8);
-      color: #fff;
-      font-size: 1.2rem;
-      border-radius: 5px;
-      animation: fadeInOut 5s;
-    }
+  <link rel="stylesheet" href="style.css" />
 
-    @keyframes fadeInOut {
-      0%, 100% {
-        opacity: 0;
-      }
-      10%, 90% {
-        opacity: 1;
-      }
-    }
-  </style>
 </head>
 
 <body>
